--- a/final-project/src/styles/ModalConfirmation.module.scss
+++ b/final-project/src/styles/ModalConfirmation.module.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1000;
+  z-index: 3;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
@@ -18,10 +18,18 @@
   }
 }
 
+.Reservation {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .modal {
-  padding: 1.875rem;
-  border-radius: .625rem;
-  background-color: rgb(219, 213, 213);
+  padding: 30px;
+  border-radius: 10px;
+  background-color: var(--color-blue2);
 }
 
 .modal-content {
@@ -29,16 +37,18 @@
   flex-direction: column;
   align-content: center;
   justify-content: center;
-  color: rgb(106, 121, 206);
+  color: var(--color-white);
 
   button {
-    margin-top: 1.25rem;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
     align-items: center;
-    padding: .625rem .625rem;
+    padding: 10px 10px;
     border: none;
-    border-radius: .3125rem;
-    background-color: rgb(106, 121, 206);
-    color: white;
+    border-radius: 5px;
+    background-color: var(--color-blueBtn);
+    color: var(--color-white);
     cursor: pointer;
   }
 }
