--- a/final-project/src/styles/Reservation.module.scss
+++ b/final-project/src/styles/Reservation.module.scss
@@ -1,4 +1,76 @@
 .Reservation {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   width: 100%;
   height: 100%;
+}
+
+.logo {
+  width: 80px;
+}
+
+.arrowLeft {
+  position: absolute;
+  top: 20px;
+  left: 0;
+  cursor: pointer;
+}
+
+.containerHours {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.hours {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-top: 20px;
+  gap: 4px;
+}
+
+.containerValueHour {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+  input {
+    width: 15px;
+    height: 15px;
+    border: none;
+    cursor: pointer;
+  }
+}
+
+.info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  color: var(--color-white);
+}
+
+.react-international-phone-input-container {
+  background-color: pink;
+}
+
+.phone {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  align-items: center;
+  // display: inline;
 }
