--- a/final-project/src/styles/ModalConfirmation.module.scss
+++ b/final-project/src/styles/ModalConfirmation.module.scss
@@ -27,28 +27,34 @@
 }
 
 .modal {
-  padding: 30px;
-  border-radius: 10px;
+  padding: 1.875rem;
+  border-radius: 0.625rem;
   background-color: var(--color-blue2);
 }
 
 .modal-content {
   display: flex;
   flex-direction: column;
+  gap: 1.25rem;
   align-content: center;
   justify-content: center;
   color: var(--color-white);
 
   button {
-    margin-top: 20px;
+    transition: color 0.3s;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px 10px;
+    padding: 0.625rem 0.625rem;
     border: none;
-    border-radius: 5px;
+    border-radius: 0.3125rem;
     background-color: var(--color-blueBtn);
-    color: var(--color-white);
+    color: var(--color-yellow);
+    font-weight: bold;
     cursor: pointer;
+
+    &:hover {
+      color: var(--color-orange);
+    }
   }
 }
