--- a/final-project/src/styles/Reservation.module.scss
+++ b/final-project/src/styles/Reservation.module.scss
@@ -13,12 +13,12 @@
 }
 
 .logo {
-  width: 80px;
+  width: 5rem;
 }
 
 .arrowLeft {
   position: absolute;
-  top: 20px;
+  top: 1.25rem;
   left: 0;
   cursor: pointer;
 }
@@ -35,19 +35,19 @@
   justify-content: center;
   flex-direction: column;
   align-items: flex-start;
-  padding-top: 20px;
-  gap: 4px;
+  padding-top: 1.25rem;
+  gap: 0.25rem;
 }
 
 .containerValueHour {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 0.625rem;
 
   input {
-    width: 15px;
-    height: 15px;
+    width: 0.9375rem;
+    height: 0.9375rem;
     border: none;
     cursor: pointer;
   }
@@ -57,6 +57,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  // padding-bottom: 1.25rem;
+  padding-top: 0.625rem;
 }
 
 .form {
@@ -67,14 +69,9 @@
   color: var(--color-white);
 }
 
-.react-international-phone-input-container {
-  background-color: pink;
-}
-
 .phone {
   display: flex;
   padding: 0;
   margin: 0;
   align-items: center;
-  // display: inline;
 }
