--- a/final-project/src/styles/Card.module.scss
+++ b/final-project/src/styles/Card.module.scss
@@ -6,7 +6,6 @@
   border-radius: 1.25rem;
   padding: 1.25rem 2.5rem 0rem 2.5rem;
   color: var(--color-white);
-  cursor: pointer;
   overflow: hidden;
 
   .cardBoxImage {
@@ -44,11 +43,11 @@
     height: 8.125rem;
     width: 100%;
     background: rgba(224, 215, 215, 0.363);
-    -webkit-backdrop-filter: blur(.625rem);
-    backdrop-filter: blur(.625rem);
+    -webkit-backdrop-filter: blur(0.625rem);
+    backdrop-filter: blur(0.625rem);
     color: var(--color-blue2);
     padding-right: 2.5rem;
-    padding-top: .625rem;
+    padding-top: 0.625rem;
 
     h4 {
       font-size: 1.125rem;
@@ -62,7 +61,7 @@
     .containerCity {
       display: flex;
       align-items: center;
-      gap: .5rem;
+      gap: 0.5rem;
     }
 
     .iconCity {
